--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body>
+<body> 
 
 	<div class="jumbotron">
 		<div class="container">
@@ -17,7 +17,7 @@
 
 	<div class="container">
 
-		<!-- RUNNER INFORMATION PANEL -->
+		<!-- RUNNER INFORMATION TICKET PANEL -->
 		<div class="col-md-6">
 			<div class="panel panel-default">
 			  	<div class="panel-heading">
@@ -27,15 +27,15 @@
 		   			<tbody>
 		   				<tr>
 		   					<th>Name:</th>
-		   					<td>....</td>
+		   					<td id="ticketName">....</td>
 		   				</tr>
 		   				<tr>
 		   					<th>Amount:</th>
-		   					<td>....</td>
+		   					<td id="ticketAmount">....</td>
 		   				</tr>
 		   				<tr>
 		   					<th>Amount Type:</th>
-		   					<td>....</td>
+		   					<td id="ticketAmountType">....</td>
 		   				</tr>
 		   			</tbody>
 		  		</table>
@@ -46,30 +46,38 @@
 		<div class="col-md-6">
 			<div class="panel panel-default">
 			  	<div class="panel-heading">
-			    	<h3 class="panel-title">Update your information</h3>
+			    	<h3 class="panel-title">Enter your information</h3>
+			  	</div>
+			  	<div id="warning">
+			  		
 			  	</div>
 			  	<div class="panel-body">
-			    	<label for="name">Your Name:</label>
-					<div class="input-group">
-  						<span class="input-group-addon" id="basic-addon3">Full Name:</span>
-  						<input type="text" class="form-control" id="name" aria-describedby="basic-addon3">
-					</div>
-					<hr>
-			    	<label for="amount">Amount (to the nearst dollar):</label>
-					<div class="input-group">
-  						<span class="input-group-addon" id="basic-addon3">$</span>
-  						<input type="number" class="form-control" id="amount" aria-describedby="basic-addon3">
-					</div>
-					<hr>
-					<label for="amountType">One time amount or Per-lap</label>
-					<div class="input-group">
-						<span class="input-group">
-        					<input type="radio" name="amountType" value="single"><span> One Time</span>
-      					</span>
-      					<span class="input-group">
-      						<input type="radio" name="amountType" value="lap"><span> Per-Lap</span>
-      					</span>
-					</div>
+				    	<label for="name">Your Name:</label>
+						<div class="input-group">
+	  						<span class="input-group-addon" id="basic-addon3">Full Name:</span>
+	  						<input type="text" class="form-control" id="name" aria-describedby="basic-addon3">
+						</div>
+						<hr>
+				    	<label for="amount">Amount (to the nearst dollar):</label>
+						<div class="input-group">
+	  						<span class="input-group-addon" id="basic-addon3">$</span>
+	  						<input type="number" class="form-control" id="amount" aria-describedby="basic-addon3">
+						</div>
+						<hr>
+						<label for="amountType">One time amount or Per-lap</label>
+						<div class="input-group">
+							<span class="input-group">
+	        					<input type="radio" name="amountType" value="One Time" checked><span> One Time</span>
+	      					</span>
+	      					<span class="input-group">
+	      						<input type="radio" name="amountType" value="Per-Lap"><span> Per-Lap</span>
+	      					</span>
+						</div>
+						<div class="btn-group" role="group" aria-label="...">
+						<hr>
+	  						<button id="donate" type="button" class="btn btn-default">Donate</button>
+	  						<button id="cancel" type="button" class="btn btn-default">Cancel</button>
+						</div>
 			  	</div>
 			</div>
 		</div>
