fixed display of saved donations

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 		<div class="col-md-6">
 			<div class="panel panel-default">
 			  	<div class="panel-heading">
-			    	<h3 class="panel-title">Your Ticket Information</h3>
+			    	<h3 class="panel-title">Runners Information</h3>
 			  	</div>
-			  	<table class="table">
+			  	<table class="table" id="ticketTable">
 		   			<tbody>
-		   				<tr>
+		   			<!-- 	<tr>
 		   					<th>Name:</th>
 		   					<td id="ticketName">....</td>
 		   				</tr>
@@ -36,7 +36,7 @@
 		   				<tr>
 		   					<th>Amount Type:</th>
 		   					<td id="ticketAmountType">....</td>
-		   				</tr>
+		   				</tr> -->
 		   			</tbody>
 		  		</table>
 			</div>
