fixed clearing issue

--- a/index.html
+++ b/index.html
@@ -21,22 +21,11 @@
 		<div class="col-md-6">
 			<div class="panel panel-default">
 			  	<div class="panel-heading">
-			    	<h3 class="panel-title">Runners Information</h3>
+			    	<h3 class="panel-title">Current Donations</h3>
 			  	</div>
 			  	<table class="table" id="ticketTable">
 		   			<tbody>
-		   			<!-- 	<tr>
-		   					<th>Name:</th>
-		   					<td id="ticketName">....</td>
-		   				</tr>
-		   				<tr>
-		   					<th>Amount:</th>
-		   					<td id="ticketAmount">....</td>
-		   				</tr>
-		   				<tr>
-		   					<th>Amount Type:</th>
-		   					<td id="ticketAmountType">....</td>
-		   				</tr> -->
+
 		   			</tbody>
 		  		</table>
 			</div>
@@ -56,6 +45,12 @@
 						<div class="input-group">
 	  						<span class="input-group-addon" id="basic-addon3">Full Name:</span>
 	  						<input type="text" class="form-control" id="name" aria-describedby="basic-addon3">
+						</div>
+						<hr>
+						<label for="email">Your Email:</label>
+						<div class="input-group">
+	  						<span class="input-group-addon" id="basic-addon2">@example.com</span>
+	  						<input type="email" class="form-control" id="email" name="email" placeholder="Your email..." aria-describedby="basic-addon2">
 						</div>
 						<hr>
 				    	<label for="amount">Amount (to the nearst dollar):</label>
